--- a/src/locales/prs/common.json
+++ b/src/locales/prs/common.json
@@ -13,6 +13,7 @@
     "event": "رویداد",
     "tasawwuf": "تصوف",
     "graduation": "فارغ التحصیلی",
+    "sanad": "سند",
     "contact": "تماس",
     "islamicLearningPlatform": "پلتفرم آموزش اسلامی",
     "more": "بیشتر",
@@ -234,11 +235,13 @@
       "emailAddress": "آدرس ایمیل",
       "phoneNumber": "شماره تلفن",
       "whatsapp": "واتساپ",
+      "questionCategory": "دسته‌بندی سوال",
       "yourIslamicQuestion": "سوال اسلامی شما",
       "enterFullName": "نام کامل خود را وارد کنید",
       "enterEmail": "ایمیل خود را وارد کنید",
       "enterPhoneOptional": "شماره تلفن وارد کنید (اختیاری)",
       "enterWhatsappOptional": "شماره واتساپ وارد کنید (اختیاری)",
+      "selectCategory": "یک دسته‌بندی انتخاب کنید",
       "writeQuestionHere": "لطفاً سوال اسلامی خود را اینجا بنویسید (حداقل ۱۵ کاراکتر)...",
       "submitting": "در حال ارسال...",
       "submitQuestion": "ارسال سوال",
@@ -247,12 +250,33 @@
       "hoursResponse": "۲۴-۴۸ ساعت",
       "expertReview": "بررسی متخصص",
       "continue": "ادامه",
+      "questionCategory": "دسته‌بندی سوال",
+      "selectCategory": "یک دسته‌بندی انتخاب کنید",
+      "loadingCategories": "در حال بارگذاری دسته‌بندی‌ها...",
+      "noCategoriesAvailable": "هیچ دسته‌بندی موجود نیست",
+      "categoriesWillAppearHere": "دسته‌بندی‌ها زمانی که از داشبورد اضافه شوند اینجا ظاهر می‌شوند",
+      "categories": {
+        "aqeedah": "عقیده (عقیده اسلامی)",
+        "fiqh": "فقه (فقه اسلامی)",
+        "hadith": "حدیث (سنت‌های نبوی)",
+        "quran": "قرآن (مطالعات قرآنی)",
+        "seerah": "سیرت (زندگینامه پیامبر)",
+        "dua": "دعا (دعاها)",
+        "family": "امور خانوادگی",
+        "marriage": "ازدواج و روابط",
+        "business": "اخلاق کسب‌وکار",
+        "health": "سلامت و پزشکی",
+        "education": "امور آموزشی",
+        "social": "مسائل اجتماعی",
+        "other": "سایر"
+      },
       "validation": {
         "pleaseEnterFullName": "لطفاً نام کامل خود را وارد کنید",
         "nameMinLength": "نام باید حداقل ۲ کاراکتر باشد",
         "nameLettersOnly": "نام فقط می‌تواند شامل حروف و فاصله باشد",
         "pleaseEnterEmail": "لطفاً آدرس ایمیل خود را وارد کنید",
         "validEmailAddress": "لطفاً آدرس ایمیل معتبر وارد کنید",
+        "pleaseSelectCategory": "لطفاً دسته‌بندی سوال را انتخاب کنید",
         "validPhoneNumber": "لطفاً شماره تلفن معتبر وارد کنید",
         "validWhatsappNumber": "لطفاً شماره واتساپ معتبر وارد کنید",
         "phoneNumbersOnly": "لطفاً برای شماره تلفن فقط عدد وارد کنید",
@@ -260,7 +284,7 @@
         "writeIslamicQuestion": "لطفاً سوال اسلامی خود را بنویسید",
         "moreDetailedQuestion": "لطفاً سوال مفصل‌تری بنویسید (حداقل ۱۵ کاراکتر)",
         "questionTooLong": "سوال خیلی طولانی است (حداکثر ۱۰۰۰ کاراکتر)",
-        "completeRequiredFields": "لطفاً تمام فیلدهای الزامی را تکمیل کنید: نام، ایمیل و سوال.",
+        "completeRequiredFields": "لطفاً تمام فیلدهای الزامی را تکمیل کنید: نام، ایمیل، دسته‌بندی و سوال.",
         "completeFollowingFields": "لطفاً فیلدهای الزامی زیر را تکمیل کنید:"
       }
     }
@@ -392,6 +416,11 @@
     "graduatesDescription": "برجسته کردن دستاوردها و سفرهای دانشجویانی که با موفقیت دوره‌های خود را تکمیل کرده‌اند",
     "loadingGraduates": "بارگذاری فارغ‌التحصیلان...",
     "viewAllGraduation": "مشاهده همه فارغ‌التحصیلی‌ها",
+    "ourSanad": "سند ما",
+    "sanadHighlight": "سند",
+    "sanadDescription": "نسب معنوی و زنجیره مبارک انتقال ما را کشف کنید",
+    "loadingSanad": "بارگذاری سند...",
+    "viewAllSanad": "مشاهده همه سندها",
     "readOurBlog": "وبلاگ ما را بخوانید",
     "exploreOurBlog": " بلاگ",
     "blogHighlight": "وبلاگ",
@@ -407,7 +436,44 @@
     "supportPrograms": "از برنامه‌های ما حمایت کنید",
     "annualContribution": "کمک سالانه",
     "transformLivesYearly": "سالانه زندگی‌ها را تغییر دهید",
-    "donateNow": "اکنون کمک کنید"
+    "donateNow": "اکنون کمک کنید",
+    "allArticles": "همه مقالات",
+    "readArticle": "مقاله را بخوانید",
+    "minRead": "دقیقه مطالعه",
+    "showLess": "کمتر نشان دهید",
+    "showMore": "بیشتر نشان دهید",
+    "readMore": "بیشتر بخوانید"
+  },
+  "donation": {
+    "chooseMethod": "روش کمک مالی خود را انتخاب کنید",
+    "chooseMethodDesc": "ما چندین روش امن و راحت برای کمک به هدف ما ارائه می‌دهیم",
+    "loadingInfo": "در حال بارگذاری اطلاعات کمک مالی...",
+    "whatsapp": "واتساپ",
+    "email": "ایمیل",
+    "location": "مکان",
+    "contactWhatsapp": "تماس از طریق واتساپ",
+    "sendEmail": "ارسال ایمیل",
+    "howToDonate": "راهنمای کمک مالی",
+    "howToDonateDesc": "این مراحل ساده را برای کمک به هدف ما دنبال کنید",
+    "step1": "روش انتخاب کنید",
+    "step1Desc": "روش مورد نظر کمک مالی خود را از گزینه‌های بالا انتخاب کنید",
+    "step2": "دستورالعمل‌ها را دنبال کنید",
+    "step2Desc": "از جزئیات ارائه شده برای تکمیل کمک مالی خود استفاده کنید",
+    "step3": "کمک مالی را تأیید کنید",
+    "step3Desc": "برای تأیید کمک مالی و دریافت به‌روزرسانی‌ها با ما تماس بگیرید",
+    "secure": "۱۰۰٪ امن",
+    "verified": "سازمان‌های تأیید شده",
+    "support": "پشتیبانی ۲۴/۷"
+  },
+  "eventsPage": {
+    "home": "خانه",
+    "events": "رویدادها",
+    "date": "تاریخ",
+    "duration": "مدت زمان",
+    "liveStream": "پخش زنده",
+    "watchLive": "تماشای زنده",
+    "aboutThisEvent": "درباره این رویداد",
+    "relatedEvents": "رویدادهای مرتبط"
   },
   "events": {
     "discoverOur": "کشف کنید",
@@ -511,5 +577,27 @@
     "fullDetails": "جزئیات کامل",
     "fullDetailsDesc": "اطلاعات کامل این عالم شامل زندگینامه، دستاوردها و موارد دیگر را مشاهده کنید.",
     "viewFullProfile": "مشاهده پروفایل کامل"
+  },
+  "graduationDetail": {
+    "graduationNotFound": "فارغ‌التحصیلی یافت نشد",
+    "fetchError": "خطا در دریافت جزئیات فارغ‌التحصیلی",
+    "date": "تاریخ",
+    "time": "زمان",
+    "graduationYear": "سال فارغ‌التحصیلی",
+    "esteemedGraduates": "فارغ‌التحصیلان محترم ما",
+    "father": "پدر",
+    "grandfather": "پدربزرگ",
+    "noStudents": "هیچ دانش‌آموزی برای این فارغ‌التحصیلی فهرست نشده است",
+    "sonOf": "پسر",
+    "grandsonOf": "نوه",
+    "personalDetails": "جزئیات شخصی",
+    "dateOfBirth": "تاریخ تولد",
+    "contact": "تماس",
+    "notProvided": "ارائه نشده",
+    "graduation": "فارغ‌التحصیلی",
+    "notSpecified": "مشخص نشده",
+    "addressInformation": "اطلاعات آدرس",
+    "fullAddress": "آدرس کامل",
+    "description": "توضیحات"
   }
 }
