--- a/src/locales/ps/common.json
+++ b/src/locales/ps/common.json
@@ -13,6 +13,7 @@
     "event": "پیښه",
     "tasawwuf": "تصوف",
     "graduation": "فراغت",
+    "sanad": "سند",
     "contact": "اړیکه",
     "islamicLearningPlatform": "د اسلامي زده کړو پلیټفارم",
     "more": "نور",
@@ -218,7 +219,58 @@
     "title": "د فتوا څانګه",
     "subtitle": "اسلامي پوهنتون - د اسلامي مسایلو په اړه پوښتنه وکړئ او د زموږ د علماءو څخه فتوا ترلاسه کړئ",
     "universityTitle": "اسلامي پوهنتون",
-    "departmentSubtitle": "د فتوا څانګه"
+    "departmentSubtitle": "د فتوا څانګه",
+    "form": {
+      "islamicQA": "اسلامي پوښتنې او ځوابونه",
+      "seekDivineGuidance": "د الهي لارښوونې لټون",
+      "getAuthenticAnswers": "د قرآن او سنت پر بنسټ د وړ علماءو څخه اصلي اسلامي ځوابونه ترلاسه کړئ.",
+      "expertScholars": "د پوهې علماء",
+      "quickResponse": "ګړندۍ ځواب",
+      "freeService": "وړیا خدمت",
+      "askYourQuestion": "خپله پوښتنه وکړئ",
+      "getPersonalizedGuidance": "شخصي لارښوونه ترلاسه کړئ",
+      "askAQuestion": "پوښتنه وکړئ",
+      "seekIslamicGuidance": "د اسلامي لارښوونې لټون",
+      "fullName": "بشپړ نوم",
+      "emailAddress": "د بریښنالیک پته",
+      "phoneNumber": "د تلیفون شمیره",
+      "whatsapp": "واټساپ",
+      "yourIslamicQuestion": "ستاسو اسلامي پوښتنه",
+      "enterFullName": "خپل بشپړ نوم ولیکئ",
+      "enterEmail": "خپل بریښنالیک ولیکئ",
+      "enterPhoneOptional": "د تلیفون شمیره ولیکئ (اختیاري)",
+      "enterWhatsappOptional": "د واټساپ شمیره ولیکئ (اختیاري)",
+      "writeQuestionHere": "مهرباني وکړئ خپله اسلامي پوښتنه دلته ولیکئ (لږ تر لږه 15 حروف)...",
+      "submitting": "لیږل کیږي...",
+      "submitQuestion": "پوښتنه ولیږئ",
+      "questionSubmitted": "پوښتنه ولیږل شوه!",
+      "questionSubmittedSuccess": "ستاسو اسلامي پوښتنه په بریالیتوب سره ولیږل شوه. زموږ علماء به یې وګوري او اصلي لارښوونه ورکړي.",
+      "hoursResponse": "24-48 ساعتونه",
+      "expertReview": "د پوهې کتنه",
+      "continue": "دوام ورکړئ",
+      "questionCategory": "د پوښتنې کټګوري",
+      "selectCategory": "یوه کټګوري وټاکئ",
+      "loadingCategories": "کټګورۍ پورته کیږي...",
+      "noCategoriesAvailable": "کټګورۍ شتون نلري",
+      "categoriesWillAppearHere": "کټګورۍ به دلته راښکاره شي کله چې د ډشبورډ څخه اضافه شي",
+      "validation": {
+        "pleaseEnterFullName": "مهرباني وکړئ خپل بشپړ نوم ولیکئ",
+        "nameMinLength": "نوم باید لږ تر لږه 2 حروف وي",
+        "nameLettersOnly": "نوم یوازې حروف او تشې لري کولی شي",
+        "pleaseEnterEmail": "مهرباني وکړئ خپله بریښنالیک پته ولیکئ",
+        "validEmailAddress": "مهرباني وکړئ د بریښنالیک ښه پته ولیکئ",
+        "validPhoneNumber": "مهرباني وکړئ د تلیفون ښه شمیره ولیکئ",
+        "validWhatsappNumber": "مهرباني وکړئ د واټساپ ښه شمیره ولیکئ",
+        "phoneNumbersOnly": "مهرباني وکړئ د تلیفون شمیرې لپاره یوازې شمیرې ولیکئ",
+        "whatsappNumbersOnly": "مهرباني وکړئ د واټساپ شمیرې لپاره یوازې شمیرې ولیکئ",
+        "writeIslamicQuestion": "مهرباني وکړئ خپله اسلامي پوښتنه ولیکئ",
+        "moreDetailedQuestion": "مهرباني وکړئ ډیرې تفصيلي پوښتنه ولیکئ (لږ تر لږه 15 حروف)",
+        "questionTooLong": "پوښتنه ډیره اوږده ده (اعظمي 1000 حروف)",
+        "pleaseSelectCategory": "مهرباني وکړئ یوه کټګوري وټاکئ",
+        "completeRequiredFields": "مهرباني وکړئ ټول اړین ساحې بشپړې کړئ: نوم، بریښنالیک، کټګوري، او پوښتنه.",
+        "completeFollowingFields": "مهرباني وکړئ لاندې اړینو ساحو بشپړولو:"
+      }
+    }
   },
   "courses": {
     "title": "د اسلامي کورسونو",
@@ -290,6 +342,11 @@
     "graduatesDescription": "د هغو زده کړیالو د بریالیتوبونو او سفرونو روښانه کول چې په بریالیتوب سره خپل کورسونه بشپړ کړي",
     "loadingGraduates": "د فارغانو پورته کول...",
     "viewAllGraduation": "ټول فراغتونه وګورئ",
+    "ourSanad": "زموږ سند",
+    "sanadHighlight": "سند",
+    "sanadDescription": "زموږ د روحاني نسب او د مبارک دودیزو سلسلو موندنه",
+    "loadingSanad": "د سند پورته کول...",
+    "viewAllSanad": "ټول سند وګورئ",
     "readOurBlog": "زموږ بلاګ ولولئ",
     "exploreOurBlog": "بلاګ",
     "blogHighlight": "بلاګ",
@@ -305,7 +362,50 @@
     "supportPrograms": "زموږ پروګرامونو ملاتړ وکړئ",
     "annualContribution": "د کال ونډه",
     "transformLivesYearly": "د کال ژوندونه بدل کړئ",
-    "donateNow": "اوس عطیه ورکړئ"
+    "donateNow": "اوس عطیه ورکړئ",
+    "allArticles": "ټول مقالې",
+    "readArticle": "مقاله ولولئ",
+    "minRead": "دقیقې لوستل",
+    "showLess": "لږ وښایاست",
+    "showMore": "نور وښایاست",
+    "readMore": "نور ولولئ"
+  },
+  "donation": {
+    "chooseMethod": "د خپل عطیه د لارې غوره کړئ",
+    "chooseMethodDesc": "موږ د خپل موخې لپاره د مرستې کولو لپاره څو امن او اسانه لارې وړاندې کوو",
+    "loadingInfo": "د عطیه معلومات پورته کول...",
+    "whatsapp": "واټساپ",
+    "email": "بریښنالیک",
+    "location": "ځای",
+    "contactWhatsapp": "د واټساپ له لارې اړیکه ونیسئ",
+    "sendEmail": "بریښنالیک واستوئ",
+    "howToDonate": "د عطیه کولو لارښود",
+    "howToDonateDesc": "د زموږ موخې لپاره مرسته کولو لپاره د دې ساده ګامونو تعقیب وکړئ",
+    "step1": "لارې غوره کړئ",
+    "step1Desc": "د پورته اختیارونو څخه خپله غوره عطیه لارې غوره کړئ",
+    "step2": "لارښوونو تعقیب وکړئ",
+    "step2Desc": "د خپل عطیه بشپړولو لپاره ورکړل شوي تفصیلات وکاروئ",
+    "step3": "عطیه تایید کړئ",
+    "step3Desc": "د خپل عطیه تاییدولو او تازه معلوماتو ترلاسه کولو لپاره موږ ته پیغام واستوئ",
+    "secure": "۱۰۰٪ امن",
+    "verified": "تصدیق شوي سازمانونه",
+    "support": "۲۴/۷ ملاتړ"
+  },
+  "eventsPage": {
+    "home": "کور",
+    "events": "پیښې",
+    "date": "نیټه",
+    "duration": "موده",
+    "liveStream": "ژوندي خپرونه",
+    "watchLive": "ژوندی وګورئ",
+    "aboutThisEvent": "د دې پیښې په اړه",
+    "relatedEvents": "اړوند پیښې"
+  },
+  "pagination": {
+    "previous": "مخکینی",
+    "next": "بل",
+    "page": "پاڼه",
+    "of": "له"
   },
   "events": {
     "discoverOur": "زموږ وپلټئ",
@@ -409,5 +509,27 @@
     "fullDetails": "بشپړ جزئیات",
     "fullDetailsDesc": "د دې عالم بشپړ معلومات شامل د ژوندلیک، لاسته راوړنې او نور وګورئ.",
     "viewFullProfile": "بشپړ پروفایل وګورئ"
+  },
+  "graduationDetail": {
+    "graduationNotFound": "فارغ‌التحصیلی و نه موندل شو",
+    "fetchError": "د فارغ‌التحصیلی جزئیاتو را اخیستلو کې ستونزه",
+    "date": "نیټه",
+    "time": "وخت",
+    "graduationYear": "د فارغ‌التحصیلی کال",
+    "esteemedGraduates": "زموږ درناوي وړ فارغ‌التحصیلان",
+    "father": "پلار",
+    "grandfather": "نیکه",
+    "noStudents": "د دې فارغ‌التحصیلی لپاره هیڅ زده کړیال نه دی لیست شوی",
+    "sonOf": "د",
+    "grandsonOf": "د",
+    "personalDetails": "شخصي جزئیات",
+    "dateOfBirth": "د زیږیدو نیټه",
+    "contact": "اړیکه",
+    "notProvided": "ورکړل شوی نه دی",
+    "graduation": "فارغ‌التحصیلی",
+    "notSpecified": "ښودل شوی نه دی",
+    "addressInformation": "د پتې معلومات",
+    "fullAddress": "بشپړه پته",
+    "description": "توضیحات"
   }
 }
