add dunation btn

--- a/src/locales/ps/common.json
+++ b/src/locales/ps/common.json
@@ -1,33 +1,33 @@
 {
   "navbar": {
-    "home": "کور",
+    "home": "کورپاڼه",
     "courses": "کورسونه",
     "iftah": "افتاء",
     "article": "مقاله",
     "awlayaa": "اولیاء",
-    "awlyaacharts": "اولیاء چارټونه",
-    "books": "کتابونه",
-    "donation": "مرسته",
+    "awlyaacharts": "اولیاء چارټ",
+    "books": "کتابتون",
+    "donation": "بسپنه",
     "blogs": "بلاګونه",
     "author": "لیکوال",
-    "event": "پیښه",
+    "event": "واقیعات",
     "tasawwuf": "تصوف",
     "graduation": "فراغت",
     "contact": "اړیکه",
     "islamicLearningPlatform": "د اسلامي زده کړو پلیټفارم",
     "more": "نور",
-    "moreOptions": "نور اختیارونه"
+    "moreOptions": "نور انتخابونه"
   },
-  "hero": {
-    "tagline": "✦ پوهه • ایمان • مشرتابه ✦",
-    "title": "انوارالعلوم مدرسه",
-    "subtitle": "د ځوانو ذهنونو روښانه کول",
-    "description": "د راتلونکي جوړول د حکمت، ارزښتونو او ایمان سره. زموږ پروګرامونو او کورسونو ته یوځئ چې د روښانه ځوانو ذهنونو د الهام لپاره ډیزاین شوي. د اسلامي علم د ښکلا موندل زموږ د بشپړو کورسونو او دودیزو تعلیماتو له لارې.",
-    "learnMore": "نور زده کړئ",
-    "viewCourses": "کورسونه وګورئ",
-    "aboutUs": "زموږ په اړه",
-    "ourCourses": "زموږ کورسونه"
-  },
+ "hero": {
+  "tagline": "✦  شریعت • طریقت • سیاست ✦",
+  "title": "اَلْجَامِعْةُ اَنوَار الْعُلُوْم اَلْاِسْلاَمِیّة اَلْعُرْفُ اَلْمَدْرَسَةٌ خلیفه صاحب ارغندی (رح)",
+  "subtitle": "د نوي نسلونو روزنه په اسلامي نظریه او روحیه",
+  "description": "اسلامي امت د شریعت، طریقت او سیاست په رڼا کې تربیه کړئ. زموږ په علمي ډګر کې هڅې د اسلامي علومو، ارزښتونو او د نبوي اخلاقو پر بنسټ ولاړې دي، څو هر ځوان مو په نبوي تګلاره ځان برابر کړي. دا الهامي چاپیریال زده کوونکو ته د علم، معنویت او اسلامي فکر درې واړه دروازې پرانیزي او هغوی ځواکمنوي چې نه یوازې د ځان، بلکې د اسلامي نړۍ، ټولنې او هیواد د روښانه راتلونکي لپاره ګټور ثابت شي.",
+  "viewCourses": "کورسونه وګورئ",
+  "aboutUs": "زموږ په اړه",
+  "ourCourses": "زموږ کورسونه"
+},
+
   "about": {
     "title": "د انوارالعلوم په اړه",
     "subtitle": "د اسلامي تعلیماتو مرکز",
@@ -38,8 +38,8 @@
     "stats": {
       "title": "زموږ د خدمتونو احصائیه",
       "description": "د ۶۳ کلونو د خدمت په ترڅ کې د زموږ د بریاوو لنډه احصائیه",
-      "years": "کلونه خدمت",
-      "graduates": "فارغان",
+      "years": " د خدمت کلونه",
+      "graduates": "فاریغان",
       "students": "د کال شاګردان",
       "scholars": "علماء",
       "since1963": "د ۱۹۶۳ راهیسې",
@@ -235,10 +235,10 @@
     "viewCourse": "د کورس لیدل",
     "recentlyUpdated": "وروسته تازه شوی",
     "instructorFallback": "حق مدرسه",
-    "courseNotFound": "کورس و نه موندل شو",
+    "courseNotFound": "کورسو نه موندل شو",
     "courseNotFoundMessage": "د کورس چې تاسو یې لټوئ شتون نلري.",
     "browseAllCourses": "ټول کورسونه وګورئ",
-    "home": "کور",
+    "home": "کور پاڼه",
     "coursePreview": "د کورس مخکتنه",
     "watchAndLearn": "وګورئ او زده کړئ",
     "previewDescription": "د دې جامع کورس څخه د هغه څه مخکتنه ترلاسه کړئ چې تاسو به یې زده کړئ",
@@ -260,17 +260,16 @@
     "introVideo": "د پیژندنې ویډیو",
     "available": "شته",
     "hours": "ساعتونه",
-    "gb": "جی بی",
-    "hd": "اچ ډی",
-    "sd": "اس ډی",
-    "fullHd": "فول اچ ډی",
-    "ultraHd": "۴کے"
+    "gb": "GB",
+    "sd": "HD",
+    "fullHd": "Full HD",
+    "ultraHd": "4K"
   },
   "home": {
     "exploreKnowledge": "د پوهې څیړنه",
     "popularCourses": "مشهور کورسونه",
     "popularCoursesHighlight": "مشهور کورسونه",
-    "coursesDescription": "زموږ مشهور کورسونو کشف وکړئ، چې د اصلي اسلامي پوهې لپاره ډیزاین شوي دي چې په",
+    "coursesDescription": "زموږ مشهور کورسونو پیدا کړئ، چې د اصلي اسلامي پوهې لپاره ډیزاین شوي دي چې په",
     "quran": "قرآن",
     "and": "او",
     "sunnah": "سنت",
@@ -285,14 +284,16 @@
     "viewAllBooks": "ټول کتابونه وګورئ",
     "loadingGallery": "د ګالري پورته کول...",
     "celebratingSuccess": "د بریالیتوب لمانځه",
-    "ourGraduates": "فارغان",
-    "graduatesHighlight": "فارغان",
+    "ourGraduates": "فاریغان",
+    "graduatesHighlight": "فاریغان",
     "graduatesDescription": "د هغو زده کړیالو د بریالیتوبونو او سفرونو روښانه کول چې په بریالیتوب سره خپل کورسونه بشپړ کړي",
-    "loadingGraduates": "د فارغانو پورته کول...",
+    "loadingGraduates": "د فاریغانو پورته کول...",
     "viewAllGraduation": "ټول فراغتونه وګورئ",
     "readOurBlog": "زموږ بلاګ ولولئ",
     "exploreOurBlog": "بلاګ",
     "blogHighlight": "بلاګ",
+
+    
     "blogDescription": "د زموږ د زده کړیالو څخه تازه مقالې، پوهه او کیسې کشف کړئ",
     "loadingBlogPosts": "د بلاګ پوسټونو پورته کول...",
     "viewAllBlogs": "ټول بلاګونه وګورئ",
@@ -305,7 +306,7 @@
     "supportPrograms": "زموږ پروګرامونو ملاتړ وکړئ",
     "annualContribution": "د کال ونډه",
     "transformLivesYearly": "د کال ژوندونه بدل کړئ",
-    "donateNow": "اوس عطیه ورکړئ"
+    "donateNow": "اوس خپله مرسته ورکړئ"
   },
   "events": {
     "discoverOur": "زموږ وپلټئ",
