Refactor layout and enhance error handling across components
- Wrapped the main layout in a ToastProvider to enable toast notifications.
- Updated AuthorsPage and AwlyaaListPage to use UnifiedLoader for loading states and ErrorDisplay for error handling.
- Replaced custom loading skeletons with UnifiedLoader in ArticlesCard, BlogCard, BooksSection, and other components.
- Improved error handling in API calls and added logging for better debugging.
- Updated footer and navbar for localization support and improved accessibility.

--- a/src/locales/ps/common.json
+++ b/src/locales/ps/common.json
@@ -17,7 +17,9 @@
     "contact": "اړیکه",
     "islamicLearningPlatform": "د اسلامي زده کړو پلیټفارم",
     "more": "نور",
-    "moreOptions": "نور انتخابونه"
+    "moreOptions": "نور انتخابونه",
+    "search": "لټون",
+    "logoAlt": "د انوارالعلوم لوګو"
   },
  "hero": {
   "tagline": "✦  شریعت • طریقت • سیاست ✦",
@@ -213,7 +215,10 @@
     "subscribe": "ګډون",
     "copyright": "مدرسه. ټول حقونه ساتل شوي.",
     "privacyPolicy": "د محرمیت پالیسي",
-    "termsOfService": "د خدمت شرطونه"
+    "termsOfService": "د خدمت شرطونه",
+    "address": "پښتون زرغون، هرات، افغانستان",
+    "phone": "+93 700 000 000",
+    "email": "info@madrasa.com"
   },
   "iftah": {
     "title": "د فتوا څانګه",
