My local changes

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -587,6 +587,81 @@
     "notSpecified": "Not specified",
     "addressInformation": "Address Information",
     "fullAddress": "Full Address",
-    "description": "Description"
+    "description": "Description",
+    "loadingGraduations": "Loading graduations...",
+    "noGraduationsFound": "No graduations found",
+    "checkBackLater": "Check back later for upcoming graduation events",
+    "graduations": "Graduations",
+    "celebratingAchievements": "Celebrating the remarkable achievements of our esteemed graduates",
+    "noDescriptionAvailable": "No description available.",
+    "top": "Top",
+    "viewDetails": "View Details"
+  },
+  "aboutPage": {
+    "shortIntroduction": "Brief Introduction to Anwar al-Uloom Islamic Madrasa",
+    "madrasaEstablishment": "Anwar al-Uloom Islamic Madrasa was established on the blessed hands of Sheikh al-Quran wa al-Hadith Hazrat Anwar al-Mashaykh Khalifa Sahib Fazl al-Din Arghandi (may Allah have mercy on him) on the 8th of Jumada al-Thani, 1383 AH / 8th of Jumada al-Thani, 1342 SH / 1963 CE in the Arghandi Ulya area of Paghman district, Kabul province.",
+    "afterDeath": "After his death, the management of the madrasa was entrusted to his brother Hazrat Taj al-Mashaykh Khalifa Sahib Saduzi Gharigi (may Allah have mercy on him). Subsequently, after the death of Taj al-Mashaykh (may Allah have mercy on him), the administration of the madrasa was entrusted to the younger son of Hazrat Arghandi Khalifa Sahib and nephew of Taj al-Mashaykh (may Allah have mercy on him), Hazrat Qalb al-Mashaykh Khalifa Sahib Muhammad Shafiq Fazli (may Allah preserve him). He continues to oversee the academic and spiritual affairs of this institution to this day, and the Sufism department has particularly achieved remarkable growth under his leadership.",
+    "academicServices": "Academic Services of the Institution",
+    "teachingDescription": "In this madrasa, religious and modern sciences are taught in an organized manner, the important departments of which are:",
+    "subjectsList": [
+      "Tajweed",
+      "Hifz (Memorization)",
+      "Tafsir (Exegesis)",
+      "Hadith",
+      "Fiqh (Jurisprudence)",
+      "Usul al-Fiqh (Principles of Jurisprudence)",
+      "Logic",
+      "Ma'ani (Semantics)",
+      "Sarf (Morphology)",
+      "Nahw (Grammar)",
+      "Hikmat (Wisdom)",
+      "Mathematics",
+      "English",
+      "Arabic",
+      "Rhetoric"
+    ],
+    "teachingMethods": "These sciences are taught in both graded (class-based) and miscellaneous ways.",
+    "teachersAndScholars": "Teachers and Scholars of the Institution",
+    "teachersList": [
+      "Khalifa Sahib Muhammad Shafiq Fazli (may Allah preserve him)",
+      "Mufti Sahib Muhammad Hassan Hassan (may Allah preserve him)",
+      "Mufti Sahib Saif al-Rahman Saeed (may Allah preserve him)",
+      "Al-Hajj Maulvi Muhammad Pazeer Farooqi (may Allah preserve him)",
+      "Maulvi Sahib Muhibullah",
+      "Maulvi Sahib Shafiq al-Rahman Akhundzada",
+      "Maulvi Sahib Ahmad Nabi",
+      "Maulvi Sahib Sadiq Sikandar",
+      "Maulvi Sahib Tahir Bilal",
+      "Maulvi Sahib Rafiullah Abu al-Sayf",
+      "Maulvi Sahib Muhammad Sharif Umar Fazli",
+      "Maulvi Sahib Ziaullah Umari",
+      "Maulvi Sahib Samiullah Faham",
+      "Maulvi Sahib Samiullah Rashid",
+      "Qari Sahib Muhammad Mirwais Tahseen",
+      "Hafiz Sahib Rahmanullah Qaid",
+      "Hafiz Sahib Sadiqullah"
+    ],
+    "studentAdmission": "Student Admission and Graduates",
+    "admissionDescription": "Every year, admission is given to approximately 500 to 700 night students.",
+    "graduatesDescription": "Over the past fifteen years, approximately 700 graduates have completed their academic stages and have been presented to the community.",
+    "teacherQualifications": "Academic Level of Teachers",
+    "teacherQualificationsDesc": "The teachers of the institution are holders of high academic levels, having master's, doctoral, and specialized degrees.",
+    "successorKhalifas": "List of Successor Khalifas",
+    "successorKhalifasList": [
+      "Janab Khalifa Sahib Izzatullah (may Allah preserve him)",
+      "Janab Khalifa Sahib Ashiq al-Rahman (may Allah preserve him)",
+      "Janab Khalifa Sahib Ismail Jan (may Allah preserve him)",
+      "Janab Khalifa Sahib Syed Muhammad (may Allah preserve him)",
+      "Janab Khalifa Sahib Bahadur (may Allah have mercy on him)",
+      "Janab Khalifa Sahib Fahim (may Allah preserve him)",
+      "Janab Khalifa Sahib Hamidullah (may Allah preserve him)",
+      "Janab Khalifa Sahib Rasul Muhammad (may Allah preserve him)",
+      "Janab Khalifa Sahib Wazir (may Allah preserve him)"
+    ],
+    "reestablishmentDetails": "After the family of Hazrat Arghandi Khalifa Sahib returned from migration, they re-established the foundation of the madrasa for the second time in the Arghandi Bazid Khel area of Kabul Paghman through Hazrat Taj al-Mashaykh Khalifa Sahib Saduzi Gharigi. And through the hands of the sons, scholars, and brothers of Hazrat Arghandi Khalifa Sahib on the date:",
+    "reestablishmentDate1": "17 / 6 / 1426 AH",
+    "reestablishmentDate2": "1 / 5 / 1384 SH",
+    "reestablishmentPrayer": "And praise be to Allah that their services in the academic and spiritual field continue to this day, may Allah continue this blessed journey until the end.",
+    "islamicSciencesBranch": "Branch of Islamic Sciences"
   }
 }
