--- a/src/locales/prs/common.json
+++ b/src/locales/prs/common.json
@@ -598,6 +598,81 @@
     "notSpecified": "مشخص نشده",
     "addressInformation": "اطلاعات آدرس",
     "fullAddress": "آدرس کامل",
-    "description": "توضیحات"
+    "description": "توضیحات",
+    "loadingGraduations": "در حال بارگذاری فارغ‌التحصیلی‌ها...",
+    "noGraduationsFound": "هیچ فارغ‌التحصیلی یافت نشد",
+    "checkBackLater": "برای رویدادهای فارغ‌التحصیلی آینده بعداً بررسی کنید",
+    "graduations": "فارغ‌التحصیلی‌ها",
+    "celebratingAchievements": "جشن دستاوردهای قابل توجه فارغ‌التحصیلان محترم ما",
+    "noDescriptionAvailable": "هیچ توضیحی موجود نیست.",
+    "top": "برتر",
+    "viewDetails": "مشاهده جزئیات"
+  },
+  "aboutPage": {
+    "shortIntroduction": "معرفی کوتاه مدرسه اسلامی انوارالعلوم",
+    "madrasaEstablishment": "مدرسه اسلامی انوارالعلوم به دست مبارک جناب شیخ القرآن والحدیث حضرت انوارالمشائخ خلیفه صاحب فضل‌الدین ارغندی رحمة‌الله علیه در هشتم جمادی‌الثانی ۱۳۸۳ هـ ق / هشتم جمادی‌الثانی ۱۳۴۲ هـ ش / ۱۹۶۳ میلادی در منطقه ارغندی علیا ولسوالی پغمان ولایت کابل تأسیس شد.",
+    "afterDeath": "پس از وفات ایشان، امور اداره مدرسه به برادرشان حضرت تاج‌المشائخ خلیفه صاحب سدوزی غریقي رحمة‌الله علیه سپرده شد. سپس، پس از وفات تاج‌المشائخ رح، اداره مدرسه به پسر کوچک حضرت ارغندی خلیفه صاحب و برادرزاده تاج‌المشائخ رح حضرت قلب‌المشائخ خلیفه صاحب محمد شفیق فضلي حفظه‌الله تعالی سپرده شد. ایشان تا کنون بر امور علمی و روحانی این نهاد نظارت می‌کند و بخش تصوف تحت رهبری ایشان رشد قابل توجهی داشته است.",
+    "academicServices": "خدمات علمی نهاد",
+    "teachingDescription": "در این مدرسه علوم دینی و مدرن به صورت منظم تدریس می‌شود که بخش‌های مهم آن عبارتند از:",
+    "subjectsList": [
+      "تجوید",
+      "حفظ",
+      "تفسیر", 
+      "حدیث",
+      "فقه",
+      "اصول الفقه",
+      "منطق",
+      "معانی",
+      "صرف",
+      "نحو",
+      "حکمت",
+      "ریاضی",
+      "انگلیسی",
+      "عربی",
+      "فن بیان"
+    ],
+    "teachingMethods": "این علوم به صورت درجه‌ای (کلاسی) و متفرقه تدریس می‌شود.",
+    "teachersAndScholars": "مشایخ و استادان نهاد",
+    "teachersList": [
+      "خلیفه صاحب محمد شفیق فضلي (حفظه‌الله)",
+      "مفتي صاحب محمد حسن حسان (حفظه‌الله)",
+      "مفتي صاحب سیف الرحمن سعید (حفظه‌الله)",
+      "الحاج مولوي محمد پزیر فاروقي (حفظه‌الله)",
+      "مولوي صاحب محب‌الله",
+      "مولوي صاحب شفیق الرحمن اخوند زاده",
+      "مولوي صاحب احمد نبي",
+      "مولوي صاحب صادق سکندر",
+      "مولوي صاحب طاهر بلال",
+      "مولوي صاحب رفیع‌الله ابوالسیف",
+      "مولوي صاحب محمد شریف عمر فضلي",
+      "مولوي صاحب ضیاءالله عمري",
+      "مولوي صاحب سمیع‌الله فهام",
+      "مولوي صاحب سمیع‌الله راشد",
+      "قاري صاحب محمد میرویس تحسین",
+      "حافظ صاحب رحمن‌الله قائد",
+      "حافظ صاحب صدیق‌الله"
+    ],
+    "studentAdmission": "دخول شاگردان و فارغان",
+    "admissionDescription": "هر سال به حدود ۵۰۰ تا ۷۰۰ شاگرد شبانه دخول داده می‌شود.",
+    "graduatesDescription": "در پانزده سال گذشته حدود ۷۰۰ نفر فارغ از مراحل علمی خود شده و به جامعه تقدیم شده‌اند.",
+    "teacherQualifications": "سطح علمی استادان",
+    "teacherQualificationsDesc": "استادان نهاد دارای سطوح علمی عالی هستند که دارای درجات کارشناسی ارشد، دکترا و تخصصی می‌باشند.",
+    "successorKhalifas": "فهرست خلفای جانشین",
+    "successorKhalifasList": [
+      "جناب خلیفه صاحب عزت الله حفظه الله",
+      "جناب خلیفه صاحب عاشق الرحمن حفظه الله",
+      "جناب خلیفه صاحب اسماعیل جان حفظه الله",
+      "جناب خلیفه صاحب سید محمد حفظه الله",
+      "جناب خلیفه صاحب بهادر رحمه الله",
+      "جناب خلیفه صاحب فهیم حفظه الله",
+      "جناب خلیفه صاحب حمید الله حفظه الله",
+      "جناب خلیفه صاحب رسول محمد حفظه الله",
+      "جناب خلیفه صاحب وزیر حفظه الله"
+    ],
+    "reestablishmentDetails": "پس از بازگشت خانواده جناب ارغندی خلیفه صاحب از مهاجرت، برای بار دوم بنیاد مدرسه را در منطقه ارغندی بازید خیل کابل پغمان از طریق جناب تاج المشائخ خلیفه صاحب سدوزی غریقي برقرار کردند. و از طریق دستان پسران، علماء و برادران جناب ارغندی خلیفه صاحب در تاریخ:",
+    "reestablishmentDate1": "۱۷ / ٦ / ١٤٢٦ هـ ق",
+    "reestablishmentDate2": "۱ / ۵ / ١٣٨۴ هـ ش",
+    "reestablishmentPrayer": "و الحمدلله که خدماتشان در عرصه علمی و روحانی تا کنون ادامه دارد، خداوند این سفر مبارک را تا انتها ادامه دهد.",
+    "islamicSciencesBranch": "شاخه علوم اسلامی"
   }
 }
