--- a/src/locales/ps/common.json
+++ b/src/locales/ps/common.json
@@ -530,6 +530,81 @@
     "notSpecified": "ښودل شوی نه دی",
     "addressInformation": "د پتې معلومات",
     "fullAddress": "بشپړه پته",
-    "description": "توضیحات"
+    "description": "توضیحات",
+    "loadingGraduations": "د فارغ‌التحصیلی‌و پورته کول...",
+    "noGraduationsFound": "هیڅ فارغ‌التحصیلی و نه موندل شو",
+    "checkBackLater": "د راتلونکو فارغ‌التحصیلی پیښو لپاره وروسته بیا وګورئ",
+    "graduations": "فارغ‌التحصیلی‌",
+    "celebratingAchievements": "زموږ د درناوي وړ فارغ‌التحصیلانو د دیرو لاسته راوړنو جشن",
+    "noDescriptionAvailable": "هیڅ توضیحات شتون نلري.",
+    "top": "غوره",
+    "viewDetails": "جزئیات وګورئ"
+  },
+  "aboutPage": {
+    "shortIntroduction": "د انوارالعلوم اسلامي مدرسې لنډه پېژندنه",
+    "madrasaEstablishment": "د انوارالعلوم اسلامي مدرسه د جناب شیخ القرآن والحدیث حضرت انوارالمشائخ خلیفه صاحب فضل‌الدین ارغندی رحمة‌الله علیه په مبارک لاس د ۱۳۸۳ هـ ق / ۱۳۴۲ هـ ش / ۱۹۶۳ م کال د جوزا په اتمه نېټه د کابل ولایت د پغمان ولسوالۍ د ارغندي علیا په سیمه کې تأسیس شوه.",
+    "afterDeath": "له نوموړي د وفات وروسته، د مدرسې د اهتمام چارې د هغه ورور حضرت تاج‌المشائخ خلیفه صاحب سدوزی غریقي رحمة‌الله علیه ته وسپارل شوې. ورپسې، د تاج‌المشائخ رح له وفات وروسته د مدرسې اداره د حضرت ارغندی خلیفه صاحب د کشر زوی او د تاج‌المشائخ رح وراره حضرت قلب‌المشائخ خلیفه صاحب محمد شفیق فضلي حفظه‌الله تعالی ته وسپارل شوه. نوموړی تر ننه د دې جامعې د علمي او روحاني چارو څارنه کوي او د تصوف څانګه یې په ځانګړي ډول د پام وړ وده کړې ده.",
+    "academicServices": "د جامعې علمي خدمتونه",
+    "teachingDescription": "په نوموړې مدرسه کې د ديني او عصري علومو تدریس په منظم ډول تر سره کېږي، چې مهمې څانګې یې دا دي:",
+    "subjectsList": [
+      "تجوید",
+      "حفظ", 
+      "تفسیر",
+      "حدیث",
+      "فقه",
+      "اصول الفقه",
+      "منطق",
+      "معاني",
+      "صرف",
+      "نحو",
+      "حکمت",
+      "ریاضي",
+      "انګلیسي",
+      "عربي",
+      "فن بیان"
+    ],
+    "teachingMethods": "دغه علوم په درجوي (صنفي) او متفرقه ډول تدریس کېږي.",
+    "teachersAndScholars": "د جامعې مشایخ او استادان",
+    "teachersList": [
+      "خلیفه صاحب محمد شفیق فضلي (حفظه‌الله)",
+      "مفتي صاحب محمد حسن حسان (حفظه‌الله)",
+      "مفتي صاحب سیف الرحمن سعید (حفظه‌الله)",
+      "الحاج مولوي محمد پزیر فاروقي (حفظه‌الله)",
+      "مولوي صاحب محب‌الله",
+      "مولوي صاحب شفیق الرحمن اخوند زاده",
+      "مولوي صاحب احمد نبي",
+      "مولوي صاحب صادق سکندر",
+      "مولوي صاحب طاهر بلال",
+      "مولوي صاحب رفیع‌الله ابوالسیف",
+      "مولوي صاحب محمد شریف عمر فضلي",
+      "مولوي صاحب ضیاءالله عمري",
+      "مولوي صاحب سمیع‌الله فهام",
+      "مولوي صاحب سمیع‌الله راشد",
+      "قاري صاحب محمد میرویس تحسین",
+      "حافظ صاحب رحمن‌الله قائد",
+      "حافظ صاحب صدیق‌الله"
+    ],
+    "studentAdmission": "د شاګردانو داخله او فارغین",
+    "admissionDescription": "هر کال شاوخوا ۵۰۰ تر ۷۰۰ پورې لیلي شاګردانو ته داخله ورکول کېږي.",
+    "graduatesDescription": "د تېرو پنځلسو کلونو په ترڅ کې شاوخوا ۷۰۰ تنه فارغین یې د علمي پړاوونو څخه فارغ شوي او ټولنې ته وړاندې شوي دي.",
+    "teacherQualifications": "د استادانو علمي سویه",
+    "teacherQualificationsDesc": "د جامعې استادان د لوړو علمي سطحو څښتنان دي، چې د ماسټري، دوکتورا او تخصصي درجې لري.",
+    "successorKhalifas": "د ځای ناستو خلیفه ګانو نوملړ",
+    "successorKhalifasList": [
+      "جناب خلیفه صاحب عزت الله حفظه الله",
+      "جناب خلیفه صاحب عاشق الرحمن حفظه الله",
+      "جناب خلیفه صاحب اسماعیل جان حفظه الله",
+      "جناب خلیفه صاحب سید محمد حفظه الله",
+      "جناب خلیفه صاحب بهادر رحمه الله",
+      "جناب خلیفه صاحب فهیم حفظه الله",
+      "جناب خلیفه صاحب حمید الله حفظه الله",
+      "جناب خلیفه صاحب رسول محمد حفظه الله",
+      "جناب خلیفه صاحب وزیر حفظه الله"
+    ],
+    "reestablishmentDetails": "دجناب ارغندی خلیفه صاحب کورنی دهجرت له دیارڅخه چې کله بېرته راستنه شوه نو په دوهم ځل یې دکابل پغمان ارغندی بازید خېل سیمه کې دمدرسې بنیاد دجناب تاج المشائخ خلیفه صاحب سدوزی غریقي. او دارغندی خلیفه صاحب د زامنو، علماءو او دمخورو په لاس په تاریخ",
+    "reestablishmentDate1": "۱۷ / ٦ / ١٤٢٦ هـ ق",
+    "reestablishmentDate2": "۱ / ۵ / ١٣٨۴ هـ ش",
+    "reestablishmentPrayer": "او لله الحمد چې په علمی او روحانی ډګر کې یې خدمات تراوسه لاجاری دی، الله ج دې ترقیامته پورې دا پور نوره روانه بېړی. روانه لری",
+    "islamicSciencesBranch": "د اسلامي علومو څانګه"
   }
 }
